--- a/Labfiles/05-ocr/Python/read-text/.env
+++ b/Labfiles/05-ocr/Python/read-text/.env
@@ -1,2 +1,2 @@
-AI_SERVICE_ENDPOINT=your_azure_ai_services_endpoint
-AI_SERVICE_KEY=your_azure_ai_services_key
+AI_SERVICE_ENDPOINT=https://parcos-ai.cognitiveservices.azure.com/
+AI_SERVICE_KEY=4a901706efff4eef873708a401c524be
